adding updates for twitch stream
Signed-off-by: jonahjon <jonahjones094@gmail.com>

--- a/events-generator/deployment.yaml
+++ b/events-generator/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: falco-event-generator-deployment
-  namespace: prow-monitoring
+  namespace: falco
   labels:
     app: falco-event-generator
 spec:
