--- a/prometheus/additional-scrape-configs_secret.yaml
+++ b/prometheus/additional-scrape-configs_secret.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: additional-scrape-configs
-  namespace: prow-monitoring
+  namespace: falco
 stringData:
   prometheus-additional.yaml: |
     - job_name: blackbox
