--- a/prometheus/prometheus_expose.yaml
+++ b/prometheus/prometheus_expose.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: prometheus
   name: prometheus
-  namespace: prow-monitoring
+  namespace: falco
 spec:
   ports:
   - name: http
