--- a/prometheus/prometheus_operator_deployment.yaml
+++ b/prometheus/prometheus_operator_deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: prometheus-operator
   name: prometheus-operator
-  namespace: prow-monitoring
+  namespace: falco
 spec:
   replicas: 1
   selector:
@@ -21,7 +21,7 @@ spec:
         - --log-level=all
         - --kubelet-service=kube-system/kubelet
         - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.45.0
-        - --namespaces=prow-monitoring
+        - --namespaces=falco
         image: quay.io/prometheus-operator/prometheus-operator:v0.45.0
         name: prometheus-operator
         ports:
