--- a/prometheus/prometheus_operator_rbac.yaml
+++ b/prometheus/prometheus_operator_rbac.yaml
@@ -10,7 +10,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-operator
-  namespace: prow-monitoring
+  namespace: falco
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -92,4 +92,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: prometheus-operator
-  namespace: prow-monitoring
+  namespace: falco
