--- a/prometheus/prometheus_rbac.yaml
+++ b/prometheus/prometheus_rbac.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: prometheus-prow
-  namespace: prow-monitoring
+  namespace: falco
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -16,7 +16,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-prow
-  namespace: prow-monitoring
+  namespace: falco
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
